--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
   <!-- اللوجو -->
-  <img src="https://www.facebook.com/photo/?fbid=809452437866109&set=a.454425690035454&__tn__=%3C" alt="Genius Academy Logo" class="logo">
+  <img src="https://scontent.fcai19-8.fna.fbcdn.net/v/t39.30808-6/431432895_809452424532777_9018148826606352395_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=m0bqLoGKQucQ7kNvwGQyeB1&_nc_oc=AdkAMPMuIU2Ku3R2vbZXY9zgxJUBGWjZ0eD6GO5fpu-SHIpYqOsWdeI9ONxSZuH555Q&_nc_zt=23&_nc_ht=scontent.fcai19-8.fna&_nc_gid=n1X6N5OhkIcmHZ_8rJLfDg&oh=00_AfKZa743woVjSQfU8QjbZIa1bC6npQyF3Wgw4Sugvvu25A&oe=6827BCF3" alt="Genius Academy Logo" class="logo">
 
   <h1>الموقع تحت التطوير مؤقتًا</h1>
   <p>شكراً لزيارتك، سنعود قريبًا.</p>
